[tool.poetry]
name = "railwaymap"
version = "0.1.0"
description = ""
authors = ["purofle <purofle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
aiohttp = "^3.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
